allow manual dispatches of deployments

--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -3,6 +3,7 @@ name: Create Publish PR
 on:
   push:
     branches: [ main ]
+  workflow_dispatch: # trigger manually
 
 permissions:
   contents: write
