--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,7 @@ name: Publish Release
 on:
   pull_request:
     types: [closed]
+  workflow_dispatch: # trigger manually
 
 permissions:
   contents: write
