--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,8 +9,10 @@ on:
 jobs:
   publish-snapshot:
     runs-on: ubuntu-latest
+    environment: Gradle Deploy
     permissions:
       contents: read
+    if: "!endsWith(github.actor, '[bot]')"
 
     steps:
       - name: Check out code
