fix(ci/cd): github not having permissions to write a release

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: Gradle Deploy
     permissions:
-      contents: read
+      contents: write
     if: "!endsWith(github.actor, '[bot]')"
 
     steps:
