fix(ci/cd): github actions not having full commit history

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for accurate version extraction
 
       - name: Set up Java 8 & cache Gradle
         uses: actions/setup-java@v4
