fix(ci/cd): duplicate releases and formatting (#51)
* fix(ci/cd): disable draft releases

* fix(ci/cd): github not having permissions to write a release

* fix(ci/cd): github actions not having full commit history

* fix(ci/cd): releases having incorrect formatting

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,12 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: Gradle Deploy
     permissions:
-      contents: read
+      contents: write
     if: "!endsWith(github.actor, '[bot]')"
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for accurate version extraction
 
       - name: Set up Java 8 & cache Gradle
         uses: actions/setup-java@v4
